--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <nav>
         <ul>
             <li><a href="#">Accueil</a></li>
-            <li> <a href="/l.html">Messages</a></li>
+            <li> <a href="l.html">Messages</a></li>
             <li><a href="#">Mon compte</a>
                 <ul>
 
-                    <li><a href="/parametre.html">Paramètres</a></li>
+                    <li><a href="parametre.html">Paramètres</a></li>
                     <li><a href="/logout.php">Déconnexion</a></li>
                 </ul>
 
