--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 </ul>
 
             </li>
-            <li><a href="/profil.html">Profils</a></li>
-            <li><a href="/abonnement.html">Abonnement</a></li>
-            <li><a href="/mail.html">Mail</a></li>
+            <li><a href="profil.html">Profils</a></li>
+            <li><a href="abonnement.html">Abonnement</a></li>
+            <li><a href="mail.html">Mail</a></li>
             <li><a href=""> Neuro-atypique</a>
 
                 <ul>
-                    <li><a href="/TSA.html">TSA </a></li>
-                    <li><a href="/tdah.html">TDAH</a></li>
+                    <li><a href="TSA.html">TSA </a></li>
+                    <li><a href="tdah.html">TDAH</a></li>
                 </ul>
             </li>
 
