--- a/l.html
+++ b/l.html
@@ -104,7 +104,7 @@
 
 <body>
     <div class="sidebar">
-        <a href="/index.html">accueil</a>
+        <a href="index.html">accueil</a>
         <div class="server-name">Messagerie</div>
         <ul class="channel-list">
             <li># général</li>
