--- a/abonnement.html
+++ b/abonnement.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="/index.html">Accueil</a>
+        <a href="index.html">Accueil</a>
         <h1>Choisissez Votre Abonnement</h1>
     </header>
     <section id="abonnement-options">
