--- a/mail.html
+++ b/mail.html
@@ -165,7 +165,7 @@
     <div class="container">
        
         <div class="sidebar">
-            <a href="/index.html"class="btn-back"> accueil</a>
+            <a href="index.html"class="btn-back"> accueil</a>
             <h2>Boîte de Réception</h2>
             <button class="btn-new" onclick="showCompose()">Nouveau Message</button>
             <div class="email-list">
